--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "typescript": "^5.4.5",
     "vite": "^5.2.12",
+    "vite-plugin-javascript-obfuscator": "^3.1.0",
     "vite-plugin-monkey": "^4.0.0"
   }
 }
